// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeUnused does not remove if run twice 1`] = `
"// Testing removing unused

const error1: string = 0;

// Line above suppression

export const foo = () => {
  console.log(
    // Other comment
    \\"foo\\",
    
    \\"bar\\",
    \\"baz\\"
  );

  const error2: string = 0;

  
  return \\"bar\\";
};

const error1: string = 0;"
`;

exports[`removeUnused removes unused error suppressions 1`] = `
"// Testing removing unused

const error1: string = 0;

// Line above suppression

export const foo = () => {
  console.log(
    // Other comment
    \\"foo\\",
    
    \\"bar\\",
    \\"baz\\"
  );

  const error2: string = 0;

  
  return \\"bar\\";
};

const error1: string = 0;"
`;

exports[`removeUnused works with autoSuppress 1`] = `
"// Testing removing unused

// @ts-expect-error - TS2322 - Type 'number' is not assignable to type 'string'. | TS2451 - Cannot redeclare block-scoped variable 'error1'.
const error1: string = 0;

// Line above suppression

export const foo = () => {
  console.log(
    // Other comment
    \\"foo\\",
    
    \\"bar\\",
    \\"baz\\"
  );

// @ts-expect-error - TS2322 - Type 'number' is not assignable to type 'string'.
  const error2: string = 0;

  
  return \\"bar\\";
};

// @ts-expect-error - TS2322 - Type 'number' is not assignable to type 'string'. | TS2451 - Cannot redeclare block-scoped variable 'error1'.
const error1: string = 0;"
`;
